# dgsearch

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
.agents/results/bugs/: bug-20260713-github-request-queue.md
.github/scripts/: acknowledge.cjs
.github/workflows/: search.yml
dgsearch/: action.py  listings.py  middlewares.py  settings.py
dgsearch/spiders/: daangn.py
scripts/: process_issues.py
tests/: acknowledge.test.cjs  test_action.py  test_adaptive_concurrency.py  test_issue_comment.py  test_pow.py  test_spider_progress.py
