[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dgsearch"
version = "0.1.0"
description = "Rate-aware regional search collector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.12,<4", "Scrapy>=2.11,<3"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["dgsearch*"]

[tool.ruff]
line-length = 100
target-version = "py311"
